<resources>
    <string name="app_name">TrackerApp</string>
    <string name="tv_title_Main">TRACKER</string>

    <string name="btn_im_operator"><font color="@color/white">I\'am an Operator</font></string>
    <string name="btn_im_passenger"><font color="@color/white">I\'am an Passenger</font></string>

    <string name="tv_login">Login</string>

    <string name="btn_login">Login</string>

    <string name="started_title">Welcome!</string>

    <string name="tv_no_account"><b>Don\'t have and account?<font color="#02ffb9"><u> Sign up</u></font></b></string>

    <string name="tv_title_signup">Sign Up</string>
    <string name="tv_title_changePass"><i>Change password</i></string>

    <string name="btn_Signup">Sign Up</string>

    <string name="change_password_operator_profileActivity"><b><font color="#ff0000"><u><i>Click to change password</i></u></font></b></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Replace this strings in the PASSENGER DRAWER [bottomsheetlayout.xml]-->
    <string name="route"><b>Route :</b> GULOD</string>
    <string name="plateNum"><b>Plate  :</b> ABC 123</string>
    <string name="driverName"><b>Driver :</b> PAJEROMO</string>


    <string name="hint_pass">Password <font color="#ff0000"><i>at least 8 characters</i></font></string>
    <string name="hint_email"><i>Email </i>\@gmail.com</string>



    <!-- TODO: name of driver -->
    <string name="tb_operator_text">Hello, Driver</string>
    <string name="tb_passenger_text">Hello, Passenger</string>

</resources>
