<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_image_bg"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageView
        android:id="@+id/img_illustration_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/jeep_tracker_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

    <TextView
        android:id="@+id/tv_started_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:text="@string/tv_title_Main"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_illustration_started" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_operator_main"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:text="@string/btn_im_operator"
            android:background="@drawable/bg_button"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_passenger_main"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_im_passenger"
            android:background="@drawable/bg_button"/>


    </LinearLayout>
</RelativeLayout>