<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_image_bg"
    tools:context=".LoginActivity">

  <TextView
      android:id="@+id/tv_started_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:layout_marginTop="30dp"
      android:text="@string/started_title"
      android:textColor="@color/white"
      android:textSize="50sp"
      android:textStyle="bold"/>


  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="18dp"
      android:layout_marginTop="10dp"
      app:cardCornerRadius="50dp"
      app:cardElevation="20dp"
      android:background="@drawable/custom_edit_text">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="20dp">

      <!-- JEEP LOGO -->
      <ImageView
          android:layout_width="200dp"
          android:layout_height="200dp"
          android:layout_gravity="center"
          android:background="@drawable/jeep_tracker_logo"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:id="@+id/et_username_login"
          android:background="@drawable/custom_edit_text"
          android:drawableLeft="@drawable/ic_baseline_person"
          android:drawablePadding="8dp"
          android:hint="Username"

          android:padding="8dp"
          android:textColor="@color/black"
          android:textColorHighlight="@color/cardview_dark_background"
          android:layout_marginTop="5dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:id="@+id/et_password_login"
          android:background="@drawable/custom_edit_text"
          android:drawableLeft="@drawable/ic_baseline_lock"
          android:drawablePadding="8dp"
          android:hint="Password"
          android:padding="8dp"
          android:inputType="textPassword"
          android:textColor="@color/black"
          android:textColorHighlight="@color/cardview_dark_background"
          android:layout_marginTop="30dp" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="20dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"

            android:id="@+id/LoginButton"
            android:text="@string/btn_login"
            android:textSize="18sp"
            android:backgroundTint="@color/blue"
            app:cornerRadius="20dp"/>

      </LinearLayout>

    </LinearLayout>

  </androidx.cardview.widget.CardView>

  <TextView
      android:id="@+id/tv_SignUp"
      style="@style/SubTitle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:gravity="center_horizontal"
      android:text="@string/tv_no_account" />

</LinearLayout>